# pi_pico_build_scripts

./: README.md
flash_tool/: picotool
project_template_minimal/: CMakeLists.txt  main.c
scripts/: build.py
